# LaCE

./: .gitignore  .readthedocs.yaml  404.html  =1.5.4  MANIFEST.in  README.md  index.html  kk.txt  pyproject.toml  readthedocs.yaml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: .python-tests.yml.swn  .python-tests.yml.swo  .python-tests.yml.swp  deploy_docs.yml  python-tests.yml  slack.yml
config_files/: config_predict.yaml  config_train.yaml
data/: ff_mpgcen.npy
data/DESI_cov/: rel_error_DESIY1.npy  rerr_DESI_Y1.json
data/GPmodels/CH24_mpgcen_gpr/: meta.npy  meta_mpg_0.npy  meta_mpg_1.npy  meta_mpg_10.npy  meta_mpg_11.npy  meta_mpg_12.npy  meta_mpg_13.npy  meta_mpg_14.npy  meta_mpg_15.npy  meta_mpg_16.npy  meta_mpg_17.npy  meta_mpg_18.npy  meta_mpg_19.npy  meta_mpg_2.npy  meta_mpg_20.npy  meta_mpg_21.npy  meta_mpg_22.npy  meta_mpg_23.npy  meta_mpg_24.npy  meta_mpg_25.npy  meta_mpg_26.npy  meta_mpg_27.npy  meta_mpg_28.npy  meta_mpg_29.npy  meta_mpg_3.npy  meta_mpg_4.npy  meta_mpg_5.npy  meta_mpg_6.npy  meta_mpg_7.npy  meta_mpg_8.npy  meta_mpg_9.npy
data/GPmodels/CH24_nyx_gpr/: meta_nyx_0.npy  meta_nyx_1.npy  meta_nyx_10.npy  meta_nyx_11.npy  meta_nyx_12.npy  meta_nyx_13.npy  meta_nyx_14.npy  (+8 more)
data/NNmodels/: NNEmulator_LaCEHC.pt  NNEmulator_LaCEHC_drop10.pt  NNEmulator_LaCEHC_drop12.pt  NNEmulator_LaCEHC_drop13.pt  NNEmulator_LaCEHC_drop14.pt  NNEmulator_LaCEHC_drop15.pt  NNEmulator_LaCEHC_drop16.pt  NNEmulator_LaCEHC_drop18.pt  NNEmulator_LaCEHC_drop19.pt  NNEmulator_LaCEHC_drop2.pt  NNEmulator_LaCEHC_drop20.pt  NNEmulator_LaCEHC_drop22.pt  NNEmulator_LaCEHC_drop23.pt  NNEmulator_LaCEHC_drop25.pt  NNEmulator_LaCEHC_drop26.pt  NNEmulator_LaCEHC_drop27.pt  NNEmulator_LaCEHC_drop29.pt  NNEmulator_LaCEHC_drop3.pt  NNEmulator_LaCEHC_drop5.pt  NNEmulator_LaCEHC_drop6.pt  NNEmulator_LaCEHC_drop7.pt  NNEmulator_LaCEHC_drop8.pt  NNEmulator_LaCEHC_drop9.pt  emulator_15.pt  emulator_16.pt  emulator_19.pt  emulator_9.pt
data/covariance/: cov_CH24_mpg_gp.npy  cov_CH24_mpg_gpr.npy  cov_CH24_mpgcen_gpr.npy  l1O_cov_CH24_mpgcen_gpr.npy  l1O_cov_CH24_nyxcen_gpr (Copy).npy  l1O_cov_CH24_nyxcen_gpr.npy
data/utils/: distances_mpg.json  distances_nyx.json  mini_chain_test.csv
developers/: index.html
developers/CreateNewEmulator/: index.html
developers/UnderDevelopment/: index.html
developers/advancedTesting/: index.html
developers/documentation/: index.html
developers/trainingOptions/: index.html
docs/: mkdocs.yml  requirements.txt
docs/docs/: archive.md  compressedParameters.md  emulatorPredictions.md  emulatorTraining.md  index.md  installation.md
docs/source/: conf.py  emulator_manager.rst  gadget_archive.rst  gp_emulator.rst  index.rst  installation.rst  introduction.rst  lace.emulator.rst  lace.utils.rst  nn_architecture.rst  nn_emulator.rst  nyx_archive.rst
installation/: index.html
lace/archive/: base_archive.py  constants.py  gadget_archive.py  interface_archive.py  nyx_archive.py  p1d_archive.py  pnd_archive.py
lace/cosmo/: base_cosmology.py  camb_cosmo.py  cosmology.py  fit_linP.py  fit_linP_cosmopower.py  labeled_cosmologies.py  rescale_cosmology.py  thermal_broadening.py  train_linP_cosmopower.py
lace/emulator/: base_emulator.py  constants.py  covariance.py  emulator.py  emulator_manager.py  gp_emulator.py  gp_emulator_multi.py  gp_emulator_new.py  interface_archive.py  nn_architecture.py  nn_emulator.py  p1d_archive.py  pd_archive.py  pnd_archive.py  poly_p1d.py  select_training.py  test_simulation.py  test_simulation_nn.py  utils.py
lace/setup_simulations/: read_gadget.py
lace/utils/: check_paramSpace.py  distance_to_center.py  exceptions.py  misc.py  nonlinear_smoothing_p1d.py  plotting_functions.py  smoothing_manager.py
notebooks/: Chains_postprocessing.py  Consistency_bookkeeping.ipynb  Durham2023_LaCETutorial.ipynb  Durham2023_LaCETutorial.py  Precision_emulator.py  Test_integration.ipynb  Tutorial_bookkeeping.ipynb  Tutorial_bookkeeping.py  Tutorial_compressedParams.py  Tutorial_cosmo.py  Tutorial_emulator.ipynb  Tutorial_emulator.py  Tutorial_interface_archive.ipynb  Tutorial_interface_emulator.ipynb  camb_interface.ipynb  camels_compressed.py  check_convexHull.py  compare_predictions.ipynb  compare_predictions.py  compute_covariance.py  investigate_compressed_params.py  nyx_central_z3.py  plot_archive.ipynb  plot_archive.py  plot_p1d_dependencies.ipynb  polyfit_emulator_cov.ipynb  test_andreu.py  test_emulator.ipynb  test_emulator.py
notebooks/Notebooks_LaCE-NN/: Comparison_GP.ipynb  Leave_One_out.ipynb  Network_architecture.ipynb  Other_cosmo_3A.ipynb  Other_cosmo_extended.ipynb  PCAemu_3A.ipynb  extended_emulator.ipynb  initial_weights.pt  initial_weights_extended.pt  initial_weights_v2.pt  mF_rescalings.ipynb  net_characterisation.ipynb  parameter_space.ipynb  polyfit_coeffs.ipynb  threeaxes_comp.ipynb
notebooks/compressed_parameters/: Chains_postprocessing.py  Tutorial_compressedParams.py  cosmopowerCAMB_comparison.py  optimize_kp.py  optimize_param_star.py
notebooks/html_Tutorials/: Tutorial_compressedParams.html  Tutorial_emulator.html
notebooks/tutorials/: Tutorial_compressedParams.py  Tutorial_emulator.py
scripts/: compute_mpg_emu_cosmo.py  compute_nyx_emu_cosmo.py  load_archive.py  make_plots_emulator.py  make_plots_emulator_all.py  predict.py  save_emulator.py  save_mpg_IGM.py  save_nyx_IGM.py  save_nyx_emu_cosmo.py  train.py  train_GPs.py
scripts/developers/: make_plots_emulator.py  save_emulator_l1O.py  save_mpg_IGM.py  save_mpg_emu_cosmo.py  save_nyx_IGM.py  save_nyx_emu_cosmo.py
search/: search_index.json
src/lace/: __init__.py
tests/: open_gadget_archive.py  open_nyx_archive.py  plot_mpg.py  plot_mpg_gp.py  plot_mpg_nn.py  run_GP_emulator.py  run_NN_emulator.py  test_lace.py
tutorials/: plot_p1d_dependence.ipynb
users/: index.html
users/Emulators_trainingSets/: index.html
users/Simulations_list/: index.html
users/archive/: index.html
users/compressedParameters/: index.html
users/emulatorPredictions/: index.html
users/emulatorTraining/: index.html
(+7352 files in other folders)
