[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="lace"
version="2024.0.0"
authors = [
    { name="Andreu Font-Ribera", email="afont@ifae.es" },
    { name="Chris Pedersen" },
    { name="Jonas Chaves-Montero", email="jchaves@ifae.es" },
    { name="Laura Cabayol-Garcia", email="lcabayol@pic.es" },
]
maintainers = [
    { name="Andreu Font-Ribera", email="afont@ifae.es" },
    { name="Jonas Chaves-Montero", email="jchaves@ifae.es" },   
    { name="Laura Cabayol-Garcia", email="lcabayol@pic.es" },
]
description = "Emulator for Lyman-alpha 1D power spectrum"
readme = "README.md"
keywords = [
    "Lyman-alpha", "Cosmology", "Power Spectrum", "Emulator",
]
requires-python = ">= 3.10"
dependencies = [
    "numpy==1.24.4",
    "pandas==2.1.4",
    "scipy==1.11.4",
    "h5py==3.10.0",
    "scikit-learn==1.3.2",
    "matplotlib==3.8.2",
    "configobj==5.0.8",
    "camb==1.5.4",
    "GPy==1.13.1",
    "torch==2.1.2",
    "scikit-fda==0.9",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific :: Cosmology/Astrophysics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
jupyter = [
    "jupyter",
    "jupytext",
]

[tool.setuptools.packages.find]
include = ["lace"]
namespaces = false

[project.urls]
Homepage="https://github.com/igmhub/LaCE"
Repository="https://github.com/igmhub/LaCE.git"
Issues="https://github.com/igmhub/LaCE/issues"