[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="lace"
version="2024.0.0"
authors = [
    { name="Andreu Font-Ribera", email="afont@ifae.es" },
    { name="Chris Pedersen" },
    { name="Jonas Chaves-Montero", email="jchaves@ifae.es" },
    { name="Laura Cabayol-Garcia", email="lcabayol@pic.es" },
]
maintainers = [
    { name="Andreu Font-Ribera", email="afont@ifae.es" },
    { name="Jonas Chaves-Montero", email="jchaves@ifae.es" },   
    { name="Laura Cabayol-Garcia", email="lcabayol@pic.es" },
]
description = "Emulator for Lyman-alpha 1D power spectrum"
readme = "README.md"
keywords = [
    "Lyman-alpha", "Cosmology", "Power Spectrum", "Emulator",
]
requires-python = ">= 3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "h5py",
    "scikit-learn",
    "matplotlib",
    "configobj",
    "camb",
    "torch==2.0",
    "scikit-fda==0.4",
    "fdasrsf==2.3.10",
    "strenum",
    "pathlib"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific :: Cosmology/Astrophysics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = [
  "pytest",
]

gpy = [
    "GPy==1.13.1",
]
explicit = [
    "numpy==1.24.3",
    "pandas==2.2.3",
    "scipy==1.12",
    "h5py==3.12.1",
    "scikit-learn==1.5.2",
    "matplotlib==3.9.2",
    "configobj==5.0.9",
    "camb==1.5.8",
    "torch==2.0",
    "scikit-fda==0.4",
    "fdasrsf==2.3.10",
    "GPy==1.13.2"
    ]

[tool.setuptools.packages.find]
include = ["lace","lace.*"]
namespaces = false


[project.urls]
Homepage="https://github.com/igmhub/LaCE"
Repository="https://github.com/igmhub/LaCE.git"
Issues="https://github.com/igmhub/LaCE/issues"

