[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="lace"
version="2024.0.0"
authors = [
    { name="Jonas Chaves-Montero", email="jchaves@ifae.es" },
    { name="Andreu Font-Ribera", email="afont@ifae.es" },
    { name="Chris Pedersen" },
    { name="Laura Cabayol-Garcia" },
]
maintainers = [
    { name="Jonas Chaves-Montero", email="jchaves@ifae.es" },  
    { name="Andreu Font-Ribera", email="afont@ifae.es" },
]
description = "Emulator for Lyman-alpha 1D power spectrum"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "Lyman-alpha", "Cosmology", "Power Spectrum", "Emulator",
]
requires-python = ">= 3.12"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn==1.5.2",
    "matplotlib",
    "configobj",
    "camb",
    "torch",
    "strenum",
    "jupytext",
    "corner",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific :: Cosmology/Astrophysics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
include = ["lace","lace.*"]
namespaces = false


[project.urls]
Homepage="https://github.com/igmhub/LaCE"
Repository="https://github.com/igmhub/LaCE.git"
Issues="https://github.com/igmhub/LaCE/issues"

