[bumpversion]
current_version = 1.0.1
commit = False
tag = False

[bumpversion:file:lace/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = lace
version = attr: lace.__version__
author = Chris Pedersen, Andreu Font-Ribera
author_email = afont@ifae.es
description = Lyman-alpha forest flux power spectrum emulator
license = GPL-v3

[options]
package_dir = 
    =src
packages = find_namespace:
include_package_data = True
python_requires = >=3.8
install_requires = file: requirements.txt

[options.packages.find]
where = src

[options.package_data]
lace = 
	data/*

[options.entry_points]
console_scripts = 
	compute_mpg_emu_cosmo = lace.scripts.compute_mpg_emu_cosmo:main
	compute_nyx_emu_cosmo = lace.scripts.compute_nyx_emu_cosmo:main